--- a/src/main/webapp/resources/public/css/calories-tracker.css
+++ b/src/main/webapp/resources/public/css/calories-tracker.css
@@ -123,7 +123,7 @@ a.logout:hover {
     .login-box {
         width: 300px;
         border: 1px solid #c2c2c2;
-        padding: 30px;
+        padding: 20px 15px 40px 15px;
         margin: 10px auto 10px auto;
 
     }
