--- a/src/main/webapp/resources/public/css/calories-tracker.css
+++ b/src/main/webapp/resources/public/css/calories-tracker.css
@@ -119,6 +119,14 @@ a.logout:hover {
         max-width: 14em;
         margin: 0 auto;
     }
+
+    .login-box {
+        width: 300px;
+        border: 1px solid #c2c2c2;
+        padding: 20px 15px 40px 15px;
+        margin: 10px auto 10px auto;
+
+    }
 }
 
 .pure-skin-theme .pure-form.search-form,
@@ -396,7 +404,3 @@ a.logout:hover {
         display: block;
     }
 }
-
-
-
-
