--- a/src/main/webapp/resources/public/css/calories-tracker.css
+++ b/src/main/webapp/resources/public/css/calories-tracker.css
@@ -110,6 +110,10 @@ a.logout:hover {
     margin: 0 auto;
     width: 400px;
 }
+.privacy-policy {
+    text-align: middle;
+    margin: 0 auto;
+}
 
 @media screen and (min-width: 48em) {
     .container {
