--- a/src/main/webapp/resources/public/css/calories-tracker.css
+++ b/src/main/webapp/resources/public/css/calories-tracker.css
@@ -111,7 +111,7 @@ a.logout:hover {
     width: 400px;
 }
 .privacy-policy {
-    text-align: middle;
+    text-align: center;
     margin: 0 auto;
 }
 
