Added a border to the error login message

--- a/src/main/webapp/resources/public/css/calories-tracker.css
+++ b/src/main/webapp/resources/public/css/calories-tracker.css
@@ -307,6 +307,7 @@ a.logout:hover {
 
 .form-messages.errors.access-screen {
     background-color: white;
+    border: 1px solid #e9322d;
 }
 
 .messages-group {
