--- a/src/main/webapp/resources/public/css/calories-tracker.css
+++ b/src/main/webapp/resources/public/css/calories-tracker.css
@@ -1,3 +1,4 @@
+
 header.page-header {
     background: #2d3e50;
     color: #eee;
@@ -60,13 +61,13 @@ header a {
     display: inline-block;
 }
 
-.today-calories1.cal-limit-ok {
+.today-calories.cal-limit-ok {
     color: #eee;
     border: 2px solid darkgreen;
     background: green;
 }
 
-.today-calories1.cal-limit-nok {
+.today-calories.cal-limit-nok {
     color: #eee;
     border: 2px solid darkred;
     background: firebrick;
@@ -106,9 +107,9 @@ a.logout:hover {
     margin: 0 0.6em;
 }
 
-@media screen and (min-width: 55em) {
+@media screen and (min-width: 48em) {
     .container {
-        max-width: 55em;
+        max-width: 48em;
         margin: 0 auto;
     }
 }
@@ -140,7 +141,7 @@ a.logout:hover {
 
 @media screen and (min-width: 35.5em) {
     .pure-skin-theme .pure-form .from-to-time {
-       
+        margin-top: 0.7em;
     }
 }
 
@@ -201,9 +202,9 @@ a.logout:hover {
 }
 
 /* if its at least sm */
-@media screen and (min-width: 55em) {
+@media screen and (min-width: 35.5em) {
     .search-form-content {
-        max-width:55em;
+        max-width: 28em;
     }
 }
 
@@ -307,7 +308,6 @@ a.logout:hover {
 
 .form-messages.errors.access-screen {
     background-color: white;
-    border: 1px solid #e9322d;
 }
 
 .messages-group {
@@ -396,3 +396,7 @@ a.logout:hover {
         display: block;
     }
 }
+
+
+
+
