--- a/src/main/webapp/resources/public/css/calories-tracker.css
+++ b/src/main/webapp/resources/public/css/calories-tracker.css
@@ -1,4 +1,3 @@
-
 header.page-header {
     background: #2d3e50;
     color: #eee;
@@ -61,13 +60,13 @@ header a {
     display: inline-block;
 }
 
-.today-calories.cal-limit-ok {
+.today-calories1.cal-limit-ok {
     color: #eee;
     border: 2px solid darkgreen;
     background: green;
 }
 
-.today-calories.cal-limit-nok {
+.today-calories1.cal-limit-nok {
     color: #eee;
     border: 2px solid darkred;
     background: firebrick;
@@ -107,9 +106,9 @@ a.logout:hover {
     margin: 0 0.6em;
 }
 
-@media screen and (min-width: 48em) {
+@media screen and (min-width: 55em) {
     .container {
-        max-width: 48em;
+        max-width: 55em;
         margin: 0 auto;
     }
 }
@@ -141,7 +140,7 @@ a.logout:hover {
 
 @media screen and (min-width: 35.5em) {
     .pure-skin-theme .pure-form .from-to-time {
-        margin-top: 0.7em;
+       
     }
 }
 
@@ -202,9 +201,9 @@ a.logout:hover {
 }
 
 /* if its at least sm */
-@media screen and (min-width: 35.5em) {
+@media screen and (min-width: 55em) {
     .search-form-content {
-        max-width: 28em;
+        max-width:55em;
     }
 }
 
@@ -308,7 +307,6 @@ a.logout:hover {
 
 .form-messages.errors.access-screen {
     background-color: white;
-    border: 1px solid #e9322d;
 }
 
 .messages-group {
@@ -318,7 +316,7 @@ a.logout:hover {
 }
 
 .access-screen  {
-    max-width: 470px;
+    max-width: 270px;
     margin-left: auto;
     margin-right: auto;
     font-size: 0.88em;
@@ -397,7 +395,3 @@ a.logout:hover {
         display: block;
     }
 }
-
-
-
-
