update color for calories

--- a/src/main/webapp/resources/public/css/calories-tracker.css
+++ b/src/main/webapp/resources/public/css/calories-tracker.css
@@ -63,8 +63,8 @@ header a {
 
 .today-calories.cal-limit-ok {
     color: #eee;
-    border: 2px solid #28E022;
-    background: #28E022;
+    border: 2px solid #C2F96A;
+    background: #C2F96A;
 }
 
 .today-calories.cal-limit-nok {
