--- a/src/main/webapp/resources/public/css/calories-tracker.css
+++ b/src/main/webapp/resources/public/css/calories-tracker.css
@@ -1,6 +1,6 @@
 
 
-body {
+.welcome-img {
     background: url('/resources/img/background.svg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
