Adding a class for pagination

--- a/src/main/webapp/resources/public/css/calories-tracker.css
+++ b/src/main/webapp/resources/public/css/calories-tracker.css
@@ -1,4 +1,6 @@
-
+.pagination {
+    color: #000000;
+}
 
 .welcome-img {
     background: url('/resources/img/background.svg') no-repeat center center fixed;
